Update video source URL in index.html

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
 <section class="video">
   <video controls autoplay muted loop>
-    <source src="https://cdn.discordapp.com/attachments/1444655862797832204/1452986751948816580/1223.mp4?ex=694bcedc&is=694a7d5c&hm=831cf9d48c399fa98e631b6777a8e9888784390f13dae78bd953440c2d02ab56&" type="video/mp4">
+    <source src="https://cdn.discordapp.com/attachments/1444655862797832204/1452986751948816580/1223.mp4?ex=69565adc&is=6955095c&hm=e25545e64f10140173d81d148720f521df10301b2b070bd5fc7b99346c85b3e1" type="video/mp4">
     Your browser does not support the video.
   </video>
 </section>
