Change title and remove video section
Updated the title from 'Venom' to 'Vyn' and removed the video section.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Venom</title>
+  <title>Vyn</title>
 
   <style>
     * {
@@ -240,12 +240,6 @@
   </div>
 </section>
 
-<section class="video">
-  <video controls autoplay muted loop>
-    <source src="https://cdn.discordapp.com/attachments/1444655862797832204/1452986751948816580/1223.mp4?ex=69565adc&is=6955095c&hm=e25545e64f10140173d81d148720f521df10301b2b070bd5fc7b99346c85b3e1" type="video/mp4">
-    Your browser does not support the video.
-  </video>
-</section>
 
 <footer>
   © 2025 Vyn All rights reserved.
