--- a/index.html
+++ b/index.html
@@ -58,15 +58,13 @@
     }
 
     /* ===== HEADER ===== */
-    header {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px 40px;
-      border-bottom: 1px solid #111;
-      background: rgba(0,0,0,0.65);
-      backdrop-filter: blur(6px);
-    }
+<header>
+  <div class="logo">
+    <img src="https://cdn.discordapp.com/attachments/1444655862797832204/1444672891970129941/ChatGPT_Image_30_nov._2025_12_42_52.png?ex=69566e7a&is=69551cfa&hm=5f682c91cf21fcb52b9a91b1ee7d25e0f85b00b76787f0705f93d7eb0c868e4a&" alt="Vyn pp">
+    <span>Vyn</span>
+  </div>
+</header>
+
 
     .logo {
       font-size: 24px;
