--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Muha Executor</title>
+  <title>Vyn Executor</title>
   <style>
     :root {
       --red: #ff2e2e;
@@ -242,19 +242,19 @@
   <header>
     <div class="logo">
       <img src="https://cdn.discordapp.com/attachments/000000000000000000/000000000000000000/logo.png" alt="logo" width="36" />
-      Muha Executor
+      Vyn Executor
     </div>
     <nav>
       <a href="#features">Features</a>
       <a href="#about">About</a>
       <a href="#faq">FAQ</a>
-      <a href="#" class="button">Get Muha</a>
+      <a href="#" class="button">Get Vyn</a>
     </nav>
   </header>
 
   <main class="hero">
     <div>
-      <h1>Execute faster with <span>Muha Executor</span>.</h1>
+      <h1>Execute faster with <span>Vyn Executor</span>.</h1>
       <p>100% keyless and free Lua executor — fast, lightweight, and clean. Optimized for maximum performance.</p>
 
       <div class="download-area">
@@ -292,8 +292,8 @@
   </section>
 
   <section id="about" class="features">
-    <h2>About Muha Executor</h2>
-    <p>Muha Executor is a modern, lightweight, and high-performance Lua executor designed for speed, stability, and ease of use.</p>
+    <h2>About Vyn Executor</h2>
+    <p>Vyn Executor is a modern, lightweight, and high-performance Lua executor designed for speed, stability, and ease of use.</p>
 
     <div class="feature-grid">
       <div class="card">🚀 Built for fast script execution with minimal delay</div>
@@ -309,13 +309,13 @@
 
     <div class="feature-grid faq-grid">
       <div class="card faq-item">
-        <strong>Is Muha Executor free?</strong>
-        <div class="faq-answer">Yes. Muha Executor is completely free and does not require any key system.</div>
+        <strong>Is Vyn Executor free?</strong>
+        <div class="faq-answer">Yes. Vyn Executor is completely free and does not require any key system.</div>
       </div>
 
       <div class="card faq-item">
         <strong>Is it safe to use?</strong>
-        <div class="faq-answer">Muha Executor is designed with stability and safety in mind. Always download from official links.</div>
+        <div class="faq-answer">Vyn Executor is designed with stability and safety in mind. Always download from official links.</div>
       </div>
 
       <div class="card faq-item">
@@ -331,7 +331,7 @@
   </section>
 
   <footer>
-    © 2026 Muha Executor — All rights reserved
+    © 2026 Vyn Executor — All rights reserved
   </footer>
 
   <script>
