--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vyn Executor</title>
+  <title>Vyn External</title>
   <style>
     :root {
       --red: #ff2e2e;
@@ -242,7 +242,7 @@
   <header>
     <div class="logo">
       <img src="https://cdn.discordapp.com/attachments/000000000000000000/000000000000000000/logo.png" alt="logo" width="36" />
-      Vyn Executor
+      Vyn External
     </div>
     <nav>
       <a href="#features">Features</a>
@@ -254,8 +254,8 @@
 
   <main class="hero">
     <div>
-      <h1>Execute faster with <span>Vyn Executor</span>.</h1>
-      <p>100% keyless and free Lua executor — fast, lightweight, and clean. Optimized for maximum performance.</p>
+      <h1>Execute faster with <span>Vyn External</span>.</h1>
+      <p>100% keyless and free Lua External — fast, lightweight, and clean. Optimized for maximum performance.</p>
 
       <div class="download-area">
         <button class="btn" onclick="toggleDownloads()">Download</button>
@@ -292,8 +292,8 @@
   </section>
 
   <section id="about" class="features">
-    <h2>About Vyn Executor</h2>
-    <p>Vyn Executor is a modern, lightweight, and high-performance Lua executor designed for speed, stability, and ease of use.</p>
+    <h2>About Vyn External</h2>
+    <p>Vyn External is a modern, lightweight, and high-performance Lua External designed for speed, stability, and ease of use.</p>
 
     <div class="feature-grid">
       <div class="card">🚀 Built for fast script execution with minimal delay</div>
@@ -309,13 +309,13 @@
 
     <div class="feature-grid faq-grid">
       <div class="card faq-item">
-        <strong>Is Vyn Executor free?</strong>
-        <div class="faq-answer">Yes. Vyn Executor is completely free and does not require any key system.</div>
+        <strong>Is Vyn External free?</strong>
+        <div class="faq-answer">Yes. Vyn External is completely free and does not require any key system.</div>
       </div>
 
       <div class="card faq-item">
         <strong>Is it safe to use?</strong>
-        <div class="faq-answer">Vyn Executor is designed with stability and safety in mind. Always download from official links.</div>
+        <div class="faq-answer">Vyn External is designed with stability and safety in mind. Always download from official links.</div>
       </div>
 
       <div class="card faq-item">
@@ -331,7 +331,7 @@
   </section>
 
   <footer>
-    © 2026 Vyn Executor — All rights reserved
+    © 2026 Vyn External — All rights reserved
   </footer>
 
   <script>
