--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
   <main class="hero">
     <div>
       <h1>Execute faster with <span>Vyn External</span>.</h1>
-      <p>100% keyless and free Lua External — fast, lightweight, and clean. Optimized for maximum performance.</p>
+      <p>100% keyless and free  External — fast, lightweight, and clean. Optimized for maximum performance.</p>
 
       <div class="download-area">
         <button class="btn" onclick="toggleDownloads()">Download</button>
@@ -263,15 +263,15 @@
       </div>
 
       <div id="downloads" class="download-options">
-        <button class="btn" onclick="window.location.href='https://example.com/link1'">Download Beta</button>
-        <button class="btn secondary" onclick="window.location.href='https://example.com/link2'">Download Stable</button>
+        <button class="btn" onclick="window.location.href='https://example.com/link1'">Linkvertise</button>
+        <button class="btn secondary" onclick="window.location.href='https://example.com/link2'">Work Ink</button>
       </div>
     </div>
 
     <div class="card preview">
-      <img src="https://cdn.discordapp.com/attachments/000000000000000000/000000000000000000/preview.png" alt="preview" />
+      <img src="https://cdn.discordapp.com/attachments/1444655862797832204/1456595916860428382/Vyn_gkikvbJAJt.png?ex=6958f028&is=69579ea8&hm=5ee156f4b26354346fc616e5f8d6bf1c279544a50e89b5e5891ae9cbab46e5cd" alt="preview" />
       <div class="badges">
-        <div class="badge">Lua</div>
+        <div class="badge">External</div>
         <div class="badge">Fast UI</div>
         <div class="badge">Lightweight</div>
         <div class="badge">Discord Support</div>
@@ -280,11 +280,11 @@
   </main>
 
   <section id="features" class="features">
-    <h2>Key Features</h2>
-    <p>Built for speed, stability, and instant Lua execution.</p>
+    <h2>Features</h2>
+    <p>Built for speed, stability, and instant load.</p>
 
     <div class="feature-grid">
-      <div class="card">⚡ Fast and stable execution</div>
+      <div class="card">⚡ Fast and stable load</div>
       <div class="card">🔓 100% Keyless</div>
       <div class="card">🎨 Modern red-themed interface</div>
       <div class="card">🧠 Low resource usage</div>
@@ -293,7 +293,7 @@
 
   <section id="about" class="features">
     <h2>About Vyn External</h2>
-    <p>Vyn External is a modern, lightweight, and high-performance Lua External designed for speed, stability, and ease of use.</p>
+    <p>Vyn External is a modern, lightweight, and high-performance External designed for speed, stability, and easy to use.</p>
 
     <div class="feature-grid">
       <div class="card">🚀 Built for fast script execution with minimal delay</div>
@@ -319,8 +319,8 @@
       </div>
 
       <div class="card faq-item">
-        <strong>Does it support most Lua scripts?</strong>
-        <div class="faq-answer">Yes, it supports the majority of commonly used Lua scripts.</div>
+        <strong>How to open it?</strong>
+        <div class="faq-answer">Just click on your keyboard insert.</div>
       </div>
 
       <div class="card faq-item">
